Sidebars spacing fixes

--- a/code/less/template-responsive.less
+++ b/code/less/template-responsive.less
@@ -18,6 +18,20 @@
 	.mondrianFtBlog .tab-content {
 		padding: 30px 30px 0 0;
 	}
+
+	#sidebar1 {
+
+		&> .module {
+			margin-right: 30px;
+		}
+	}
+
+	#sidebar2 {
+
+		&> .module {
+			margin-left: 30px;
+		}
+	}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {
